refactor: allow to configure prefixed topics/subjects via config